kubernetes/kubernetes/.archive/default/dashy/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: start.internal
spec:
  tls:
    - hosts:
      - start.internal
      secretName: dashy-ing-cert
  ingressClassName: nginx
  rules:
  - host: start.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashy
            port:
              number: 80
